--- a/InvoiceCreatorApp/App.xaml
+++ b/InvoiceCreatorApp/App.xaml
@@ -2,9 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:InvoiceCreatorApp"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/InvoiceView.xaml">
     <Application.Resources>
         <!-- Resources -->
     </Application.Resources>
 </Application>
-<!-- Treba vymenit toto : StartupUri="Views/MainWindow.xaml"   za toto:  Startup="ApplicationStart"  avsak potom neuvdis nahlad graficky-->
+<!-- Treba vymenit toto : StartupUri="Views/InvoiceView.xaml"  za toto:  Startup="ApplicationStart"  avsak potom neuvdis nahlad graficky-->
