Vorbereitung für Monatsbilanz, Ergänzung um ToolTip

--- a/InvoiceCreatorApp/Views/InvoiceView.xaml
+++ b/InvoiceCreatorApp/Views/InvoiceView.xaml
@@ -6,10 +6,14 @@
         xmlns:viewModel="clr-namespace:InvoiceCreatorApp.ViewModels"
         xmlns:local="clr-namespace:InvoiceCreatorApp.Views"
         mc:Ignorable="d"
-        Title="Invoice Creator App: Rechnung" Height="450" Width="800" Background="#FF9BC6D7">
+        Title="Invoice Creator App: Rechnung" Height="450" Width="800" Background="#FF9BC6D7"
+        ResizeMode="NoResize">
+
     <Window.DataContext>
         <viewModel:InvoiceViewModel/>
     </Window.DataContext>
+
+  
     <Window.Resources>
 
         <!-- Define button style -->
@@ -21,7 +25,7 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Width" Value="150"/>
+            <Setter Property="Width" Value="140"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="Effect">
                 <Setter.Value>
@@ -89,7 +93,6 @@
 
         <!-- Existing UI elements in the first and second row -->
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
-            <!-- Your header or other elements here -->
         </StackPanel>
 
         <!-- Main content in the second row -->
@@ -105,22 +108,22 @@
             <TextBlock x:Name="txtbTotalTax" HorizontalAlignment="Left" Margin="646,306,0,0" TextWrapping="Wrap" Text="{Binding TotalTax}" VerticalAlignment="Top" Width="86"/>
             <TextBlock x:Name="txtbFinalPrice" HorizontalAlignment="Left" Margin="646,326,0,0" TextWrapping="Wrap" Text="{Binding FinalPrice}" VerticalAlignment="Top" Width="80"/>
 
-            <TextBox x:Name="txtCustomerName" HorizontalAlignment="Left" Margin="113,229,0,0" Text="{Binding CustomerName, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206"/>
-            <TextBox x:Name="txtStreetInvoiceRecipient" HorizontalAlignment="Left" Margin="113,252,0,0" Text="{Binding CustomerStreet, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206"/>
-            <TextBox x:Name="txtCityInvoiceRecipient" HorizontalAlignment="Left" Margin="113,278,0,0" Text="{Binding CustomerCity, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206"/>
-            <TextBox x:Name="txtPostCodeInvoiceRecipient" HorizontalAlignment="Left" Margin="113,304,0,0" Text="{Binding CustomerPostalCode, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206"/>
-            <TextBox x:Name="txtCustomerNumber" HorizontalAlignment="Left" Margin="113,330,0,0" Text="{Binding CustomerNumber, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206"/>
-            <TextBox x:Name="txtDescriptionOfGoods" HorizontalAlignment="Left" Margin="439,216,0,0" Text="{Binding DescriptionOfGoods, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="190"/>
-            <TextBox x:Name="txtPricePerPiece" HorizontalAlignment="Left" Margin="439,238,0,0" Text="{Binding PricePerPiece, UpdateSourceTrigger=PropertyChanged, StringFormat=N2}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" UndoLimit="10"/>
-            <TextBox x:Name="txtNumberOfGoods" HorizontalAlignment="Left" Margin="439,260,0,0" Text="{Binding NumberOfGoods, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" UndoLimit="1000"/>
+            <TextBox x:Name="txtCustomerName" HorizontalAlignment="Left" Margin="113,229,0,0" Text="{Binding CustomerName, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206" ToolTip="Der Kundenname muss länger als drei Zeichen sein."/>
+            <TextBox x:Name="txtStreetInvoiceRecipient" HorizontalAlignment="Left" Margin="113,252,0,0" Text="{Binding CustomerStreet, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206" ToolTip="Die Straße muss länger als drei Zeichen sein und darf nur Buchstaben, Zahlen und bestimmte Sonderzeichen (-, _, ') enthalten."/>
+            <TextBox x:Name="txtCityInvoiceRecipient" HorizontalAlignment="Left" Margin="113,278,0,0" Text="{Binding CustomerCity, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206" ToolTip="Die Stadt muss länger als drei Zeichen sein und darf nur Buchstaben enthalten."/>
+            <TextBox x:Name="txtPostCodeInvoiceRecipient" HorizontalAlignment="Left" Margin="113,304,0,0" Text="{Binding CustomerPostalCode, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206" ToolTip="Die Postleitzahl muss länger als drei Zeichen sein und darf nur Zahlen enthalten."/>
+            <TextBox x:Name="txtCustomerNumber" HorizontalAlignment="Left" Margin="113,330,0,0" Text="{Binding CustomerNumber, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="206" ToolTip="Die Kundennummer muss länger als drei Zeichen sein und darf nur Zahlen enthalten."/>
+            <TextBox x:Name="txtDescriptionOfGoods" HorizontalAlignment="Left" Margin="439,216,0,0" Text="{Binding DescriptionOfGoods, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="190" ToolTip="Die Beschreibung der Waren muss länger als zwei Zeichen sein."/>
+            <TextBox x:Name="txtPricePerPiece" HorizontalAlignment="Left" Margin="439,238,0,0" Text="{Binding PricePerPiece, StringFormat=N2, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" UndoLimit="10" ToolTip="Der Preis pro Stück muss eine gültige Zahl sein, einschließlich Dezimalzahlen mit einem Komma."/>
+            <TextBox x:Name="txtNumberOfGoods" HorizontalAlignment="Left" Margin="439,260,0,0" Text="{Binding NumberOfGoods, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" UndoLimit="1000" ToolTip="Die Anzahl der Waren muss eine gültige Zahl sein und weniger als 3 Zeichen lang sein."/>
 
             <DataGrid ItemsSource="{Binding oneInvoice}" AutoGenerateColumns="False" Margin="327,10,10,187" SelectedItem="{Binding SelectedItem}" IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Pos." Binding="{Binding Position}" Width="40*"/>
-                    <DataGridTextColumn Header="Bezeichnung" Binding="{Binding Description, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="200"/>
-                    <DataGridTextColumn Header="Menge" Binding="{Binding NumberOfGoods, UpdateSourceTrigger=PropertyChanged}" Width="50"/>
-                    <DataGridTextColumn Header="Preis pro Stück" Binding="{Binding PricePerPiece, UpdateSourceTrigger=PropertyChanged}" Width="90"/>
-                    <DataGridTextColumn Header="Gesamtpreis" Binding="{Binding NettoPrice, UpdateSourceTrigger=PropertyChanged}" Width="120*"/>
+                    <DataGridTextColumn Header="Pos." Binding="{Binding Position}" Width="45*" CanUserResize="False"/>
+                    <DataGridTextColumn Header="Bezeichnung" Binding="{Binding Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" CanUserResize="False"/>
+                    <DataGridTextColumn Header="Menge" Binding="{Binding NumberOfGoods, UpdateSourceTrigger=PropertyChanged}" Width="50" CanUserResize="False"/>
+                    <DataGridTextColumn Header="Preis pro Stück" Binding="{Binding PricePerPiece, UpdateSourceTrigger=PropertyChanged}" Width="90" CanUserResize="False"/>
+                    <DataGridTextColumn Header="Gesamtpreis" Binding="{Binding NettoPrice, UpdateSourceTrigger=PropertyChanged}" Width="120*" CanUserResize="False"/>
                 </DataGrid.Columns>
             </DataGrid>
 
@@ -142,6 +145,7 @@
 
             <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="163" Margin="11,194,0,0" VerticalAlignment="Top" Width="311"/>
             <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="132" Margin="10,10,0,0" VerticalAlignment="Top" Width="311"/>
+
         </Grid>
 
         <!-- StackPanel with buttons in the third row -->
@@ -150,6 +154,7 @@
             <Button x:Name="btnDeleteItem" Content="Artikel löschen" Command="{Binding DeleteCommand}" Style="{StaticResource ButtonStyle}"/>
             <Button x:Name="btnUpdateItem" Content="Artikel aktualisieren" Command="{Binding UpdateCommand}" Style="{StaticResource ButtonStyle}"/>
             <Button x:Name="btnSaveInvoice" Content="Speichern Rechnung" Command="{Binding SaveCommand}" Style="{StaticResource ButtonStyle}"/>
+            <Button x:Name="btnMonthlyBalance" Content="Monatsbilanz" Command="{Binding MonthlyBalanceCommand}" Style="{StaticResource ButtonStyle}"/>
         </StackPanel>
     </Grid>
 </Window>
