--- a/InvoiceCreatorApp/Views/MonthlyBalanceView.xaml
+++ b/InvoiceCreatorApp/Views/MonthlyBalanceView.xaml
@@ -1,19 +1,15 @@
-﻿<Window x:Class="InvoiceCreatorApp.Views.LoginView"
+﻿<Window x:Class="InvoiceCreatorApp.Views.MonthlyBalanceView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InvoiceCreatorApp.Views"
-        xmlns:viewModel="clr-namespace:InvoiceCreatorApp.ViewModels"
         mc:Ignorable="d"
-        Title="LoginView" Height="300" Width="300" Background="#FF9BC6D7"
+        Title="MonthlyBalanceView" Height="450" Width="800" Background="#FF9BC6D7"
         ResizeMode="NoResize">
-    <Window.DataContext>
-        <viewModel:LoginViewModel/>
-    </Window.DataContext>
-    
+
+
     <Window.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
 
         <!-- Define button style -->
         <Style x:Key="ButtonStyle" TargetType="Button">
@@ -24,7 +20,7 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Width" Value="60"/>
+            <Setter Property="Width" Value="140"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="Effect">
                 <Setter.Value>
@@ -35,13 +31,13 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
                         <Border x:Name="border" Background="{TemplateBinding Background}" 
-            CornerRadius="10"
-            RenderTransformOrigin="0.5,0.5">
+                            CornerRadius="10"
+                            RenderTransformOrigin="0.5,0.5">
                             <Border.RenderTransform>
                                 <ScaleTransform ScaleX="1" ScaleY="1"/>
                             </Border.RenderTransform>
                             <ContentPresenter HorizontalAlignment="Center" 
-                            VerticalAlignment="Center"/>
+                         VerticalAlignment="Center"/>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
@@ -82,19 +78,42 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </Window.Resources> 
-    
-
-    <Window.Visibility>
-        <Binding Path="IsViewVisible" Mode="TwoWay" Converter="{StaticResource BooleanToVisibility}"/>
-    </Window.Visibility>
+    </Window.Resources>
 
     <Grid>
-        <Button x:Name="btnLogIn" Command="{Binding LoginCommand}" Content="Login" HorizontalAlignment="Left" Margin="130,167,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14" Width="120" Style="{StaticResource ButtonStyle}"/>
-        <TextBox x:Name="txtUserName" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="130,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="14"/>
-        <Label x:Name="lblUserName" Content="Benutzername:" HorizontalAlignment="Left" Margin="16,42,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14"/>
-        <Label x:Name="lblPassword" Content="Passwort:" HorizontalAlignment="Left" Margin="16,100,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-        <TextBlock x:Name="txtbErrorMessage" Text="{Binding ErrorMessage}" HorizontalAlignment="Left" Margin="130,130,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <local:PasswordUserControlView x:Name="passwordBox" Password="{Binding Password,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" HorizontalAlignment="Left" Margin="130,107,0,0" VerticalAlignment="Top" Width="120"/>
+        <Grid HorizontalAlignment="Left" Height="330" Margin="287,94,0,0" VerticalAlignment="Top" Width="503">
+            <TabControl>
+                <TabItem Header="Einnahmen">
+                    <Grid Background="#FFE5E5E5">
+                        <DataGrid d:ItemsSource="{Binding InvoiceData.invoices}">
+
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Pos." Width="45" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Bezeichnung" Width="200" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Menge" Width="50" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Preis pro Stück" Width="90" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Gesamtpreis" Width="120*" CanUserResize="False"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Ausgaben">
+                    <Grid Background="#FFE5E5E5">
+                        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Pos." Width="45" CanUserResize="False"/>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Grid>
+                </TabItem>
+            </TabControl>
+        </Grid>
+        <DatePicker HorizontalAlignment="Left" Margin="364,30,0,0" VerticalAlignment="Top" Name="von" SelectedDate="01.01.2024"/>
+        <DatePicker HorizontalAlignment="Left" Margin="538,30,0,0" VerticalAlignment="Top" Name="bis" SelectedDate="01.02.2024"/>
+        <Button HorizontalAlignment="Left" VerticalAlignment="Top" Content="Back" Margin="50,350,0,0" Style="{StaticResource ButtonStyle}">
+            <Button.RenderTransform>
+                <MatrixTransform/>
+            </Button.RenderTransform>
+        </Button>
     </Grid>
 </Window>
