--- a/InvoiceCreatorApp/Views/MonthlyBalanceView.xaml
+++ b/InvoiceCreatorApp/Views/MonthlyBalanceView.xaml
@@ -89,15 +89,15 @@
             <TabControl Margin="0,0,0,78">
                 <TabItem Header="Einnahmen">
                     <Grid Background="#FFE5E5E5" Height="273">
-                        <DataGrid d:ItemsSource="{Binding Invoices}" Margin="0,0,0,45">
+                        <DataGrid  ItemsSource="{Binding Invoices}" Margin="0,0,0,45" AutoGenerateColumns="False">
 
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="Re.Nr." Width="45" Binding="{Binding InvoiceNum}" CanUserResize="False"/>
-                                <DataGridTextColumn Header="Datum" Width="60" Binding="{Binding CurrentTime}" CanUserResize="False"/>
-                                <DataGridTextColumn Header="Kunde" Binding="{Binding CustomerName}" Width="90" CanUserResize="False"/>
-                                <DataGridTextColumn Header="Netto" Width="90" Binding="{Binding Netto}" CanUserResize="False"/>
-                                <DataGridTextColumn Header="USt." Width="45" Binding="{Binding Tax}" CanUserResize="False"/>
-                                <DataGridTextColumn Header="Betrag" Width="120*" Binding="{Binding FinalPrice}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Re.Nr." Width="150" Binding="{Binding InvoiceNumber}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Datum" Width="60" Binding="{Binding DateOfIssue}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Kunde" Binding="{Binding Customer.CustomerName}" Width="90" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Netto" Width="90" Binding="{Binding Subtotal}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="USt." Width="45" Binding="{Binding VAT}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Betrag" Width="90*" Binding="{Binding Total}" CanUserResize="False"/>
                             </DataGrid.Columns>
                         </DataGrid>
                     </Grid>
@@ -113,15 +113,17 @@
                 </TabItem>
             </TabControl>
         </Grid>
-        <DatePicker HorizontalAlignment="Left" Margin="364,30,0,0" VerticalAlignment="Top" Name="von" SelectedDate="01.01.2024"/>
-        <DatePicker HorizontalAlignment="Left" Margin="538,30,0,0" VerticalAlignment="Top" Name="bis" SelectedDate="01.02.2024"/>
+        <DatePicker HorizontalAlignment="Left" Margin="364,30,0,0" VerticalAlignment="Top" Name="von" DisplayDateEnd="{Binding SelectedDateTimeEndDate}" DisplayDateStart="2024-01-01" />
+        <DatePicker HorizontalAlignment="Left" Margin="538,30,0,0" VerticalAlignment="Top" Name="bis"  DisplayDateEnd="{Binding SelectedDateTimeEndDate}"/>
         <Button HorizontalAlignment="Left" VerticalAlignment="Top" Content="Back" Margin="50,350,0,0" Command="{Binding OpenInvoiceCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Style="{StaticResource ButtonStyle}">
             <Button.RenderTransform>
                 <MatrixTransform/>
             </Button.RenderTransform>
         </Button>
+        
         <TextBlock x:Name="txtbIncome" HorizontalAlignment="Left" Margin="72,127,0,0" TextWrapping="Wrap" Text="Text"  VerticalAlignment="Top" Width="96"/>
         <TextBlock x:Name="txtbOutgoings" HorizontalAlignment="Left" Margin="72,201,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="97"/>
+        
         <Label x:Name="lblIncome" Content="Einnahmen:" HorizontalAlignment="Left" Margin="60,96,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <Label x:Name="lblOutgoings" Content="Ausgaben:" HorizontalAlignment="Left" Margin="60,170,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <Label x:Name="lblFinalBalance" Content="Endgültige Bilanz:" HorizontalAlignment="Left" Margin="60,233,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
