--- a/InvoiceCreatorApp/App.xaml
+++ b/InvoiceCreatorApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:InvoiceCreatorApp"
-             StartupUri="Views/MonthlyBalanceView.xaml">
+             Startup="ApplicationStart">
     <Application.Resources>
         <!-- Resources -->
     </Application.Resources>
