--- a/InvoiceCreatorApp/Views/MonthlyBalanceView.xaml
+++ b/InvoiceCreatorApp/Views/MonthlyBalanceView.xaml
@@ -89,44 +89,58 @@
             <TabControl Margin="0,0,0,78">
                 <TabItem Header="Einnahmen">
                     <Grid Background="#FFE5E5E5" Height="273">
-                        <DataGrid  ItemsSource="{Binding Invoices}" Margin="0,0,0,45" AutoGenerateColumns="False">
+                        <DataGrid  ItemsSource="{Binding Invoices}" Margin="0,0,0,45" AutoGenerateColumns="False" IsReadOnly="True">
 
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="Re.Nr." Width="150" Binding="{Binding InvoiceNumber}" CanUserResize="False"/>
-                                <DataGridTextColumn Header="Datum" Width="60" Binding="{Binding DateOfIssue}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Re.Nr." Width="50" Binding="{Binding InvoiceNumber}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Datum" Width="65" Binding="{Binding DateOfIssue}" CanUserResize="False"/>
                                 <DataGridTextColumn Header="Kunde" Binding="{Binding Customer.CustomerName}" Width="90" CanUserResize="False"/>
-                                <DataGridTextColumn Header="Netto" Width="90" Binding="{Binding Subtotal}" CanUserResize="False"/>
-                                <DataGridTextColumn Header="USt." Width="45" Binding="{Binding VAT}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Netto" Width="80" Binding="{Binding Subtotal}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="USt." Width="60" Binding="{Binding VAT}" CanUserResize="False"/>
                                 <DataGridTextColumn Header="Betrag" Width="90*" Binding="{Binding Total}" CanUserResize="False"/>
                             </DataGrid.Columns>
                         </DataGrid>
                     </Grid>
                 </TabItem>
                 <TabItem Header="Ausgaben">
-                    <Grid Background="#FFE5E5E5">
-                        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}">
+                    <Grid Background="#FFE5E5E5" Height="273">
+                        <DataGrid ItemsSource="{Binding Expenses}" Margin="0,0,0,45" AutoGenerateColumns="False" IsReadOnly="True">
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="Pos." Width="45" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Re.Nr." Width="50" Binding="{Binding ExpenseNumber}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Datum" Width="65" Binding="{Binding IssueDate}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Kunde" Binding="{Binding CompanyName}" Width="90" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Netto" Width="80" Binding="{Binding Netto}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="USt." Width="60" Binding="{Binding VAT}" CanUserResize="False"/>
+                                <DataGridTextColumn Header="Betrag" Width="90*" Binding="{Binding Total}" CanUserResize="False"/>
                             </DataGrid.Columns>
                         </DataGrid>
                     </Grid>
                 </TabItem>
             </TabControl>
         </Grid>
-        <DatePicker HorizontalAlignment="Left" Margin="364,30,0,0" VerticalAlignment="Top" Name="von" DisplayDateEnd="{Binding SelectedDateTimeEndDate}" DisplayDateStart="2024-01-01" />
-        <DatePicker HorizontalAlignment="Left" Margin="538,30,0,0" VerticalAlignment="Top" Name="bis"  DisplayDateEnd="{Binding SelectedDateTimeEndDate}"/>
+
+        <DatePicker HorizontalAlignment="Left" Margin="364,30,0,0" VerticalAlignment="Top" Name="von" DisplayDateEnd="{Binding EndDate}" DisplayDateStart="{Binding StartDate}" SelectedDate="{Binding StartDateSelected}" SelectedDateFormat="Short" />
+        <DatePicker HorizontalAlignment="Left" Margin="538,30,0,0" VerticalAlignment="Top" Name="bis"  DisplayDateEnd="{Binding EndDate}" SelectedDate="{Binding EndDateSelected}"/>
+
         <Button HorizontalAlignment="Left" VerticalAlignment="Top" Content="Back" Margin="50,350,0,0" Command="{Binding OpenInvoiceCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Style="{StaticResource ButtonStyle}">
             <Button.RenderTransform>
                 <MatrixTransform/>
             </Button.RenderTransform>
         </Button>
-        
-        <TextBlock x:Name="txtbIncome" HorizontalAlignment="Left" Margin="72,127,0,0" TextWrapping="Wrap" Text="Text"  VerticalAlignment="Top" Width="96"/>
-        <TextBlock x:Name="txtbOutgoings" HorizontalAlignment="Left" Margin="72,201,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="97"/>
-        
-        <Label x:Name="lblIncome" Content="Einnahmen:" HorizontalAlignment="Left" Margin="60,96,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label x:Name="lblOutgoings" Content="Ausgaben:" HorizontalAlignment="Left" Margin="60,170,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label x:Name="lblFinalBalance" Content="Endgültige Bilanz:" HorizontalAlignment="Left" Margin="60,233,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <TextBlock HorizontalAlignment="Left" Margin="72,264,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="97"/>
+
+        <TextBlock x:Name="txtbIncome" HorizontalAlignment="Left" Margin="72,127,0,0" TextWrapping="Wrap" Text="{Binding Income}"  VerticalAlignment="Top" Width="96" FontWeight="Bold" FontSize="16"/>
+        <TextBlock x:Name="txtbExpense" HorizontalAlignment="Left" Margin="72,201,0,0" TextWrapping="Wrap" Text="{Binding Expense}" VerticalAlignment="Top" Width="97" FontSize="16" FontWeight="Bold"/>
+        <TextBlock x:Name="txtbFinalBalance" HorizontalAlignment="Left" Margin="72,264,0,0" TextWrapping="Wrap" Text="{Binding FinalBalance}" VerticalAlignment="Top" Width="97" FontSize="16" FontWeight="Bold"/>
+
+        <Label x:Name="lblIncome" Content="Einnahmen:" HorizontalAlignment="Left" Margin="60,96,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
+        <Label x:Name="lblExpense" Content="Ausgaben:" HorizontalAlignment="Left" Margin="60,170,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
+        <Label x:Name="lblFinalBalance" Content="Endgültige Bilanz:" HorizontalAlignment="Left" Margin="60,233,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
+        <Label Content="€" HorizontalAlignment="Left" Margin="173,122,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
+        <Label Content="€" HorizontalAlignment="Left" Margin="171,195,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
+        <Label Content="€" HorizontalAlignment="Left" Margin="171,259,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
+        <Label Content="-" HorizontalAlignment="Left" Margin="50,196,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="69" Margin="50,96,0,0" VerticalAlignment="Top" Width="156"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="68" Margin="50,165,0,0" VerticalAlignment="Top" Width="156"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="68" Margin="50,233,0,0" VerticalAlignment="Top" Width="156"/>
     </Grid>
 </Window>
